[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/menu/orphanage/OrphanTab.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menu/orphanage/OrphanVBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/menu/orphanage/OrphanMenuTab.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_top = 16.0
content_margin_bottom = 16.0

[node name="OrphanageMenuTab" type="MarginContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 4 )
tab_type = 3

[node name="BackContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 544.0
mouse_filter = 2

[node name="BackButton" type="Button" parent="BackContainer"]
margin_right = 128.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 544.0
mouse_filter = 2
custom_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_left = 433.0
margin_right = 526.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 4
text = "~ Orphanage ~"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 960.0
margin_bottom = 368.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 637.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = SubResource( 1 )
tabs_visible = false

[node name="OrphanTab" parent="VBoxContainer/HBoxContainer/TabContainer" instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 641.0
margin_right = 960.0
margin_bottom = 332.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_left = 98.0
margin_right = 220.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Available Upgrades"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 319.0
margin_bottom = 332.0
size_flags_vertical = 3
custom_styles/bg = SubResource( 2 )

[node name="AvailableVBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
margin_top = 16.0
margin_right = 319.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 384.0
margin_right = 960.0
margin_bottom = 512.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 318.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 318.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )

[node name="OrphanSelection" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer"]
margin_right = 318.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="OrphanVBox" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/OrphanSelection" instance=ExtResource( 2 )]
margin_left = 127.0
margin_right = 191.0
margin_bottom = 128.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 322.0
margin_right = 960.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
